--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+
+.env
+nul
+*.key
+*.jar
+
+
 # ================================
 # 1. OS / 공통 환경
 # ================================
@@ -163,9 +170,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
-.env
-nul
 
 # ==============================
 # 11. playwright 관련
