--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -91,7 +91,7 @@ logging:
 server:
   port: 8080
   servlet:
-    context-path: /api
+    context-path: ""
     encoding:
       charset: UTF-8
       enabled: true
